--- a/templates/grid/pagination.html.twig
+++ b/templates/grid/pagination.html.twig
@@ -36,7 +36,7 @@
 					<span class=" relative z-10 inline-flex items-center px-4 py-2 text-sm font-semibold text-gray-700 select-none">
 						...
 					</span>
-					<button type="button" data-page="{{ paginated.totalPages }}" class="relative inline-flex items-center px-4 py-2 border text-gray-700 hover:bg-light">
+					<button type="button" data-page="{{ paginated.totalPages }}" class="js-sdg-p-lp relative inline-flex items-center px-4 py-2 border text-gray-700 hover:bg-light">
 						{{ paginated.totalPages }}
 					</button>
 				{% endif %}
