--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -1,7 +1,5 @@
 {% extends "base.html.twig" %}
 
 {% block body %}
-	{% include "grid/grid.html.twig"  with {
-    grid:grid
-} %}
+	<twig:SyDataGrid grid="{{grid}}"/>
 {% endblock %}
