--- a/templates/grid/grid.html.twig
+++ b/templates/grid/grid.html.twig
@@ -1,18 +1,8 @@
 <div class="js-sydatagrid-placeholder">
-	<div class="js-sydatagrid content-container bg-white shadow-md px-2 py-0" data-reset-url="{{grid.resetUrl}}" data-pagination-data='{{grid.jsonPaginationData}}'>
-
+	<div class="js-sydatagrid content-container bg-white shadow-md px-2 py-0" data-reset-url="{{grid.resetUrl}}" data-pagination-data='{{grid.jsonPaginatedData}}'>
 		<div class="min-h-[50vh] flex justify-center items-center js-sydatagrid-loader">
 			<div class="loader "></div>
 		</div>
-
-
-		<div class="js-sydatagrid-f-display-btn absolute top-2 left-2 p-2 rounded-full border bg-white opacity-50 hover:opacity-100 border-gray-400 z-10 cursor-pointer anim">
-			{{ux_icon('filter', {'class':'size-5'})}}
-		</div>
-
-		{% include "grid/filters.html.twig" with {
-			filters: grid.data.filters
-		} %}
 
 		<div class="w-full overflow-auto hidden js-sydatagrid-table-container">
 			<table class="table w-full min-w-max">
@@ -28,7 +18,7 @@
 							<th class="p-3 text-center w-24">Actions</th>
 						{% endif %}
 
-						{% if grid.getSortableColumn is not null %}
+						{% if grid.getSortableColumnName is not null %}
 							<th class="p-3 w-10"></th>
 						{% endif %}
 					</tr>
@@ -70,7 +60,7 @@
 								</td>
 							{% endif %}
 
-							{% if grid.getSortableColumn is not null %}
+							{% if grid.getSortableColumnName is not null %}
 								<td>
 									{{ ux_icon('sort', { 'class': 'js-sdg-sort-handle size-5 cursor-pointer hover:text-primary anim' }) }}
 								</td>
