--- a/templates/grid/grid.html.twig
+++ b/templates/grid/grid.html.twig
@@ -5,8 +5,8 @@
 		</div>
 
 		<div class="w-full overflow-auto hidden js-sydatagrid-table-container">
-			<table class="table w-full min-w-max">
-				<thead>
+			<table class="table w-full max-w-full">
+				<thead class="[&>tr>th]:w-[1%] [&>tr>th]:whitespace-nowrap">
 					<tr>
 						{% for col in grid.columns %}
 							<th class="p-3 text-center">
@@ -15,13 +15,47 @@
 						{% endfor %}
 
 						{% if grid.hasActions %}
-							<th class="p-3 text-center w-24">Actions</th>
+							<th class="p-3 text-center !w-[.1%]">Actions</th>
 						{% endif %}
 
 						{% if grid.getSortableColumnName is not null %}
-							<th class="p-3 w-10"></th>
+							<th class="!w-[.1%]"></th>
 						{% endif %}
 					</tr>
+
+					{% if grid.hasSearchableColumn %}
+						<tr>
+							{% for col in grid.columns %}
+								{% if col.isSearchable %}
+									{% set searchable = col.getSearchable %}
+
+									<th class="p-1">
+										{% if searchable.type.value == 1 %}
+											<input type="text" name="{{col.key}}" class="rounded-md border w-full p-1 text-sm font-normal anim focus:border-primary"/>
+										{% elseif searchable.type.value == 2 %}
+											<select name="{{col.key}}" class="rounded-md border w-full p-1 text-sm font-normal anim focus:border-primary">
+												{% for key, val  in searchable.options['options'] %}
+													<option value="{{key}}">
+														{{val}}
+													</option>
+												{% endfor %}
+											</select>
+										{% endif %}
+									</th>
+								{% else %}
+									<th></th>
+								{% endif %}
+							{% endfor %}
+
+							{% if grid.hasActions %}
+								<th class="p-3 text-center !w-[.1%]"></th>
+							{% endif %}
+
+							{% if grid.getSortableColumnName is not null %}
+								<th class="!w-[.1%]"></th>
+							{% endif %}
+						</tr>
+					{% endif %}
 				</thead>
 
 				<tbody>
@@ -61,7 +95,7 @@
 							{% endif %}
 
 							{% if grid.getSortableColumnName is not null %}
-								<td>
+								<td class="text-right ">
 									{{ ux_icon('sort', { 'class': 'js-sdg-sort-handle size-5 cursor-pointer hover:text-primary anim' }) }}
 								</td>
 							{% endif %}
