--- a/templates/grid/grid.html.twig
+++ b/templates/grid/grid.html.twig
@@ -53,7 +53,7 @@
 										{% elseif searchable.type.value == 2 %}
 											<select name="{{col.key}}" data-col="{{col.key}}" class="rounded-md border w-full p-1 text-sm font-normal anim focus:border-primary js-sydatagird-col-search-select">
 												{% for key, val  in searchable.options['options'] %}
-													<option value="{{key}}">
+													<option value="{{key}}" {% if grid.getSearchingColumn(col.key) == key %} selected {% endif %}>
 														{{val}}
 													</option>
 												{% endfor %}
