--- a/src/Resources/views/grid/grid.html.twig
+++ b/src/Resources/views/grid/grid.html.twig
@@ -123,7 +123,7 @@
 			</table>
 		</div>
 
-		{% include "grid/pagination.html.twig" with {
+		{% include "@SyDataGrid/grid/pagination.html.twig" with {
 		paginated: grid.data,
 	} %}
 	</div>
