--- a/src/Resources/views/grid/grid.html.twig
+++ b/src/Resources/views/grid/grid.html.twig
@@ -48,17 +48,21 @@
 								{% if col.isSearchable %}
 									{% set searchable = col.getSearchable %}
 									<th class="p-1">
-										{% if searchable.type.value == 1 %}
-											<input type="text" name="{{ col.key }}" value="{{grid.getSearchingColumn(col.key)}}" data-col="{{ col.key }}" class="rounded-md border w-full p-1 text-sm font-normal anim focus:border-primary js-sydatagird-col-search-input"/>
-										{% elseif searchable.type.value == 2 %}
-											<select name="{{col.key}}" data-col="{{col.key}}" class="rounded-md border w-full p-1 text-sm font-normal anim focus:border-primary js-sydatagird-col-search-select">
-												{% for key, val  in searchable.options['options'] %}
-													<option value="{{key}}" {% if grid.getSearchingColumn(col.key) == key %} selected {% endif %}>
-														{{val}}
-													</option>
-												{% endfor %}
-											</select>
-										{% endif %}
+										<div class="flex items-center">
+											{% if searchable.type.value == 1 %}
+												<input type="text" name="{{ col.key }}" value="{{grid.getSearchingColumn(col.key)}}" data-col="{{ col.key }}" class="rounded-md border w-full p-1 text-sm font-normal anim focus:border-primary js-sydatagird-col-search-input"/>
+											{% elseif searchable.type.value == 2 %}
+												<select name="{{col.key}}" data-col="{{col.key}}" class="rounded-md border w-full p-1 text-sm font-normal anim focus:border-primary js-sydatagird-col-search-select">
+													<option value="">-- Select option --</option>
+													{% for key, val  in searchable.options['options'] %}
+														<option value="{{key}}" {% if grid.getSearchingColumn(col.key) == key %} selected {% endif %}>
+															{{val}}
+														</option>
+													{% endfor %}
+												</select>
+											{% endif %}
+											{{ ux_icon('x-circle', { 'class': 'size-4 ml-2 anim hover:text-primary cursor-pointer js-sydatagrid-reset-filter', 'data-col':col.key }) }}
+										</div>
 									</th>
 								{% else %}
 									<th></th>
