--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,7 +12,7 @@
 		{% endblock %}
 
 		{% block javascripts %}
-			{{ vite_entry_script_tags('app') }}
+			{{ vite_entry_script_tags('scripts') }}
 		{% endblock %}
 	</head>
 	<body class="p-10"> {% block body %}{% endblock %}
